--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "build": "ng build",
         "test": "ng test",
         "lint": "ng lint",
-        "e2e": "ng e2e"
+        "e2e": "ng e2e",
+        "packagr": "ng-packagr -p ng-package.json"
     },
     "private": true,
     "dependencies": {
@@ -21,10 +22,14 @@
         "@angular/platform-browser": "^4.0.0",
         "@angular/platform-browser-dynamic": "^4.0.0",
         "@angular/router": "^4.0.0",
-        "bootstrap": "^3.3.7",
+        "autoprefixer": "^7.2.5",
+        "bootstrap": "^4.0.0-alpha.6",
         "core-js": "^2.4.1",
         "jquery": "^3.3.1",
+        "popper.js": "^1.13.0",
+        "postcss-cli": "^4.1.1",
         "rxjs": "^5.4.1",
+        "tether": "^1.4.3",
         "zone.js": "^0.8.14"
     },
     "devDependencies": {
@@ -43,7 +48,9 @@
         "karma-coverage-istanbul-reporter": "^1.2.1",
         "karma-jasmine": "~1.1.0",
         "karma-jasmine-html-reporter": "^0.2.2",
+        "ng-packagr": "^1.6.0",
         "protractor": "~5.1.2",
+        "tether": "^1.4.3",
         "ts-node": "~3.0.4",
         "tslint": "~5.3.2",
         "typescript": "~2.3.3"
