--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "autoprefixer": "^7.2.5",
         "bootstrap": "^4.0.0-alpha.6",
         "core-js": "^2.4.1",
+        "font-awesome": "^4.7.0",
         "jquery": "^3.3.1",
         "popper.js": "^1.13.0",
         "postcss-cli": "^4.1.1",
